--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "dependencies": {
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-redux": "^5.0.1",
+    "react-redux-form": "^1.5.0",
+    "redux": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
